[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://players/playerAcode.gd" type="Script" id=2]
[ext_resource path="res://font/MatchupPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://players/armaimg.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "andar"
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1.75, 1.75 ),
"update": 0,
"values": [ Vector2( 0.8, 1.1 ), Vector2( 1.2, 0.8 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "parado"
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 8 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_space = 1
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 12 )

[node name="playerA" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 1, 0.8 )

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( -1.19209e-07, 2.38419e-07 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/andar = SubResource( 4 )
anims/parado = SubResource( 5 )

[node name="arma" type="Sprite" parent="."]
position = Vector2( 0, 6 )
texture = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="arma"]
position = Vector2( 14.88, 0 )
scale = Vector2( 0.2, 0.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -19.0
margin_top = -23.0
margin_right = 57.0
margin_bottom = -9.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "seu nome"
align = 1
valign = 1
autowrap = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1536
limit_bottom = 1152
smoothing_enabled = true
smoothing_speed = 2.5

[node name="Timer_shoter" type="Timer" parent="."]
wait_time = 0.25

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "vida
"
align = 1
valign = 1

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -148.0
margin_right = -84.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "vida
"
align = 1
valign = 1

[node name="hit_time" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 6 )

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="timeout" from="Timer_shoter" to="." method="_on_Timer_shoter_timeout"]
[connection signal="timeout" from="hit_time" to="." method="_on_hit_time_timeout"]
[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
